// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UnnnicSelect.vue > snapshot testing > matches snapshot with default props 1`] = `
"<div data-v-6077efb7="" class="unnnic-select">
  <section data-v-5a3125ac="" data-v-6077efb7="" class="unnnic-popover">
    <div data-v-5a3125ac="" class="unnnic-popover__trigger" data-testid="popover-trigger">
      <div data-v-d890ad85="" data-v-6077efb7="" class="unnnic-form md unnnic-select__input">
        <!--v-if-->
        <div data-v-a0d36167="" data-v-d890ad85="" class="text-input size--md unnnic-select__input unnnic-form-input" mask=""><input data-v-86533b41="" data-v-a0d36167="" class="unnnic-select__input unnnic-form-input input-itself input size-md normal input--has-icon-right unnnic-select__input unnnic-form-input input-itself" placeholder="" iconleft="" iconright="keyboard_arrow_down" iconleftclickable="false" iconrightclickable="false" hascloudycolor="false" type="text" readonly="" value="">
          <!--v-if--><span data-v-26446d8e="" data-v-a0d36167="" class="material-symbols-rounded unnnic-icon-scheme--fg-base unnnic-icon-size--ant icon-right" data-testid="material-icon" translate="no">keyboard_arrow_down</span>
        </div>
        <section data-v-d890ad85="" class="unnnic-form__hints-container">
          <section data-v-d890ad85="" class="unnnic-form__message-container">
            <!--v-if-->
            <!--v-if-->
          </section>
          <!--v-if-->
        </section>
      </div>
    </div>
    <!--v-if-->
  </section>
</div>"
`;

exports[`UnnnicSelect.vue > snapshot testing > matches snapshot with disabled state 1`] = `
"<div data-v-6077efb7="" class="unnnic-select">
  <section data-v-5a3125ac="" data-v-6077efb7="" class="unnnic-popover">
    <div data-v-5a3125ac="" class="unnnic-popover__trigger" data-testid="popover-trigger">
      <div data-v-d890ad85="" data-v-6077efb7="" class="unnnic-form md unnnic-select__input">
        <!--v-if-->
        <div data-v-a0d36167="" data-v-d890ad85="" class="text-input size--md unnnic-select__input unnnic-form-input" mask=""><input data-v-86533b41="" data-v-a0d36167="" class="unnnic-select__input unnnic-form-input input-itself input size-md normal input--has-icon-right unnnic-select__input unnnic-form-input input-itself" placeholder="" iconleft="" iconright="keyboard_arrow_down" iconleftclickable="false" iconrightclickable="false" hascloudycolor="false" type="text" readonly="" value="" disabled="">
          <!--v-if--><span data-v-26446d8e="" data-v-a0d36167="" class="material-symbols-rounded unnnic-icon-scheme--fg-muted unnnic-icon-size--ant icon-right" data-testid="material-icon" translate="no">keyboard_arrow_down</span>
        </div>
        <section data-v-d890ad85="" class="unnnic-form__hints-container">
          <section data-v-d890ad85="" class="unnnic-form__message-container">
            <!--v-if-->
            <!--v-if-->
          </section>
          <!--v-if-->
        </section>
      </div>
    </div>
    <!--v-if-->
  </section>
</div>"
`;

exports[`UnnnicSelect.vue > snapshot testing > matches snapshot with search enabled 1`] = `
"<div data-v-6077efb7="" class="unnnic-select">
  <section data-v-5a3125ac="" data-v-6077efb7="" class="unnnic-popover">
    <div data-v-5a3125ac="" class="unnnic-popover__trigger" data-testid="popover-trigger">
      <div data-v-d890ad85="" data-v-6077efb7="" class="unnnic-form md unnnic-select__input">
        <!--v-if-->
        <div data-v-a0d36167="" data-v-d890ad85="" class="text-input size--md unnnic-select__input unnnic-form-input" mask=""><input data-v-86533b41="" data-v-a0d36167="" class="unnnic-select__input unnnic-form-input input-itself input size-md normal input--has-icon-right unnnic-select__input unnnic-form-input input-itself" placeholder="" iconleft="" iconright="keyboard_arrow_down" iconleftclickable="false" iconrightclickable="false" hascloudycolor="false" type="text" readonly="" value="">
          <!--v-if--><span data-v-26446d8e="" data-v-a0d36167="" class="material-symbols-rounded unnnic-icon-scheme--fg-base unnnic-icon-size--ant icon-right" data-testid="material-icon" translate="no">keyboard_arrow_down</span>
        </div>
        <section data-v-d890ad85="" class="unnnic-form__hints-container">
          <section data-v-d890ad85="" class="unnnic-form__message-container">
            <!--v-if-->
            <!--v-if-->
          </section>
          <!--v-if-->
        </section>
      </div>
    </div>
    <!--v-if-->
  </section>
</div>"
`;

exports[`UnnnicSelect.vue > snapshot testing > matches snapshot with selected value 1`] = `
"<div data-v-6077efb7="" class="unnnic-select">
  <section data-v-5a3125ac="" data-v-6077efb7="" class="unnnic-popover">
    <div data-v-5a3125ac="" class="unnnic-popover__trigger" data-testid="popover-trigger">
      <div data-v-d890ad85="" data-v-6077efb7="" class="unnnic-form md unnnic-select__input">
        <!--v-if-->
        <div data-v-a0d36167="" data-v-d890ad85="" class="text-input size--md unnnic-select__input unnnic-form-input" mask=""><input data-v-86533b41="" data-v-a0d36167="" class="unnnic-select__input unnnic-form-input input-itself input size-md normal input--has-icon-right unnnic-select__input unnnic-form-input input-itself" placeholder="" iconleft="" iconright="keyboard_arrow_down" iconleftclickable="false" iconrightclickable="false" hascloudycolor="false" type="text" readonly="" value="Option 1">
          <!--v-if--><span data-v-26446d8e="" data-v-a0d36167="" class="material-symbols-rounded unnnic-icon-scheme--color-gray-700 unnnic-icon-size--ant icon-right" data-testid="material-icon" translate="no">keyboard_arrow_down</span>
        </div>
        <section data-v-d890ad85="" class="unnnic-form__hints-container">
          <section data-v-d890ad85="" class="unnnic-form__message-container">
            <!--v-if-->
            <!--v-if-->
          </section>
          <!--v-if-->
        </section>
      </div>
    </div>
    <!--v-if-->
  </section>
</div>"
`;
